move to CoreNLP 3.8; fold in entity mentions pull request 323